--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
 	<a [routerLink]="['/contact']">
     Contact Us
   </a>
+  <a [routerLink]="['/maintenance']">
+    Maintenance
+  </a>
 </nav>
 
 <main>
