--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <h2>Contact Reactive Form</h2>
-
+<!-- [formGroup] is the binding target AND contanctForm is the binding source-->
 <form (ngSubmit)="submitForm()" [formGroup]="contactForm" novalidate>
   <div class="form-content">
     <label>
