adds functionality for adding and removing maintenance items

--- a/src/app/maintenance/maintenance-item-list.component.html
+++ b/src/app/maintenance/maintenance-item-list.component.html
@@ -1,3 +1,4 @@
 <app-maintenance-item 
 	*ngFor="let maintenanceItem of maintenanceItems"
-	[maintenanceItem]="maintenanceItem"></app-maintenance-item> 
+	[maintenanceItem]="maintenanceItem"
+	(delete)="onMaintenanceItemDelete($event)"></app-maintenance-item> 
