--- a/src/app/maintenance/maintenance-item.component.html
+++ b/src/app/maintenance/maintenance-item.component.html
@@ -2,3 +2,6 @@
 {{maintenanceItem.date_submitted}}<br/>
 <h5>Room: {{maintenanceItem.room}}</h5>
 <small>Entry Ok? {{maintenanceItem.entry_ok}}</small>
+<a class="delete" (click)="onDelete()">
+        remove
+</a>
